--- a/src/markdown/arabic/7. Environment.md
+++ b/src/markdown/arabic/7. Environment.md
@@ -1,36 +1,36 @@
 البيئة الحالية تبرمج العقل ، ولكن العقل، بذكائة، يستطيع أن يحديد بيئته.
 
-يصبح الإنسان بيئته. من الضروري أن يقوم المرء بترتيب بيئتة بوحشية وبشكل جراحي وفقًا للمكان الذي يريد الذهاب إليه.
+يصبح الإنسان بيئته. من الضروري أن يقوم المرء بترتيب بيئتة بوحشية وبشكل مُتقن وفقًا لأهدافه وللمكان الذي يريد الذهاب اليه.
 
-كسر أي ادمان يتطلب نظام جديداً للحياة. يعاني الناس من الإقلاع عن إدمانهم، لأنه فوق تدمير إدمانك الفيزيائي، يجب عليك تغيير نمط حياتك ايضاً. يجب عليك أن تتغير إلى نمط حياة يجعلك سعيداً بدون هذه المادة.
+كسر أي ادمان يتطلب نظاماً جديداً للحياة. يعاني الناس من الإقلاع عن إدمانهم، لأنه فوق تدمير إدمانك الجسدي، يجب عليك تغيير نمط حياتك ايضاً. يجب عليك أن تتغير إلى نمط حياة يجعلك سعيداً بدون هذه المادة.
 
 إذا كان هنالك حفرة في حياتك حيث كانت تتواجد الإباحية، فكيف تتوقع انك ستملئ هذه الحفرة؟ إذا كنت ما زلت تتعطش للمتعة وللأحاسيس، فستملئ هذا الفراغ بشيء اخر مدمر لذاتِك. فعندما تفعل ذلك، هل فعلاً قد حققت اي تقدم؟ يجب على المرء أن يغير نمط حياته و منظوره لكي يتغير إدمانه للإباحية. 
 
-عندما يقل عدم الفهم للبيئة المحيطة، يتواجد الصراع. البيئة تنجب الصراع، وإن لم نفهم البيئة، والشروط، والأشياء المحيطة، وكنا فقط نبحث عن بدائل لهذه الأشياء، فإننا فقط نتجنب صراعاً و نواجه صراعاً اخر. 
+عندما يقل عدم الفهم للبيئة المحيطة، يتواجد الصراع. البيئة تُنجب الصراع، وإن لم نفهم البيئة، وشروطها، والأشياء المحيطة بنا، وكنا فقط نبحث عن البدائل لهذه الأشياء، فإننا فقط نتجنب صراعاً و نواجه صراعاً اخر. 
 
 
 ## التأثير الخارجي
 
-الإدمان يربط و يثبت العلاقات والنشاطات الزائفة. إذا بدأت في شرب الخمور، وقمت بفعل ذلك بشكل مستمر، فسأجد نفسي جالساً مع اشخاصٍ لما كنت لأقضي معهم أي وقت إلا بسبب شربي للخمور. عندما أعود لوعي (بعد أن كنت ثملاً)، فلا اطيق هؤلاء الناس، أو الأشياء التي نتكلم عنها، أو الاماكن التي نزورها. يمكنني فقط أن اقوم بذلك إذا كنت ثملاً
+الإدمان يربط و يثبت العلاقات والنشاطات الزائفة. إذا بدأتُ في شرب الخمور، وقمتُ بفعل ذلك بشكل مستمر، فسأجد نفسي جالساً مع اشخاصٍ ما كنت لأقضي معهم أي وقت إلا بسبب شربي للخمور. عندما أعود للوعي (بعد أن كنت ثملاً)، فلا اطيق هؤلاء الناس، أو الأشياء التي نتكلم عنها، أو الاماكن التي نزورها. يمكنني فقط أن اقوم بذلك إذا كنت ثملاً.
 
-ويمكن أيضاً أن يعمل الأمر بشكل عكسي. لنقل على سبيل المثال أن جميع اصدقائك متصلون بك عن طريق عادة منهكة ("التعافي" معاً). كيف يمكنك أن تترك هذه العادة إلا إذا أصبحت وحيداً؟ كيف يمكنك أن تترك إدمانك بدون أن تشعر بذنب أنك نجوت، وكلهم فشلوا؟
+ويمكن أيضاً أن يعمل الأمر بشكل عكسي. لنقل على سبيل المثال أن جميع اصدقائك متصلون بك عن طريق عادة منهكة (أي "التعافي" معاً). كيف يمكنك أن تترك هذه العادة إلا إذا أصبحت وحيداً؟ كيف يمكنك أن تترك إدمانك بدون أن تشعر بذنب أنك نجوت، وأن كُلَهُم فشِلوا؟
 
-هذه هي المشكلة مع الـ"مجموعات" المبنية على ترك الإدمان. إذا كان إدمان الإباحية (أو اي إدمان في العموم) هو الصفة الجامعة بينكم، فبناء مجموعة حول هذا الأمر يعني إما أن تتحرر وإما أن تظل مع أصدقائك. هذا الوضع يقوم بخلق ضغط غير ضروري. أهم قاعدة للتعامل مع الصراع، هو أن تتجنب الأشخاص الذين دائماً ما يخضون الصراعات.  
+هذه هي المشكلة مع الـ"مجموعات" المبنية على ترك الإدمان. إذا كان إدمان الإباحية (أو اي إدمان في العموم) هو الصفة الجامعة بينكم، فبِنَاء مجموعة حول هذا الأمر يعني إما أن تتحرر وإما أن تظل مع أصدقائك. هذا الوضع يقوم بخلق ضغط غير ضروري. أهم قاعدة للتعامل مع الصراع، هو أن تتجنب الأشخاص الذين دائماً يخضون الصراعات.  
 
-مجاميع الـ"لا إباحية" والـ"حفاظ على السائل المنوي" تدل الناس الى الفشل بسبب نظامها. ليس بسبب هدفهم المنتج، ولكن بسبب تركيب المجموعة ذات نفسه. مبدئياً، هذه المجاميع تخلق ضغطاً غير ضروري. ثانياً، قد تطلب النصائح من اشخاص لا يمتلكون ادنى فكرة عما يتحدثون عنه. ثالثاً، قد تحاول أن تساعد الناس، ولكنك تفشل لأن اولويتك هي أن تساعد نفسك. رابعاً، قد تحث هذه المجموعة على "ارقام قياسية" لعدد الأيام التي توقفتها عن الإباحية. خامساً، بعض المجاميع لا تدل الى الحقيقة، بل تدل الى الإستنتاج. بكل بساطة - هذه المجاميع ستبطئ تقدمك و ستؤذي قدرتك على أن تصبح حراً.  
+مجاميع الـ"لا إباحية" والـ"حفاظ على السائل المنوي" تدل الناس الى الفشل بسبب نظامها. ليس بسبب هدفهم المنتج، ولكن بسبب تركيب المجموعة ذات نفسه. مبدئياً، هذه المجاميع تخلق ضغطاً غير ضروري. ثانياً، قد تَطلب النصائح من اشخاص لا يمتلكون ادنى فكرة عما يتحدثون عنه. ثالثاً، قد تحاول أن تساعد الناس، ولكنك تفشل لأن اولويتك هي أن تساعد نفسك. رابعاً، قد تحث هذه المجموعة على "ارقام قياسية" لعدد الأيام التي توقفتها عن الإباحية. خامساً، بعض المجاميع لا تدل الى الحقيقة، بل تدل الى الإستنتاج. بكل بساطة - هذه المجاميع ستبطئ تقدمك و ستؤذي قدرتك على أن تصبح حراً.  
 
 المعلومات المتضادة هي مصدر التشتت. والكثير منهم ينشرون معلومات قد تبدو موثوقة، وكأنهم يعلمون ما يتكلمون عنه. ولكن، دعني اطمئنك، في العالم الذي نعيش به، المعلومات الخاطئة تقوم بإدارة كل شيء. هل هذا "سيء"؟ - بالنسبة للمجموعة؟ لا. بالنسبة للشخص؟ نعم.
 
-إذا نظرت الى هذه المجاميع أو المنتديات للحظة، يمكنك ان ترى اليأس في قلوب الناس. يقولون لانفسهم أن هذه المرة ستكون مختلفة، وأنها هي المرة التي سيقومون بالتحكم بأنفسهم. ولكنهم لا يغيرون شيئاً. لا يغيرون شيئاً في مفهومهم، ويفشلون مرة اخرى على نفس النهج. وبعد بعضٍ من الوقت، قد قاموا بفسخ الكثير من الوعود التي اقاموها مع انفسهم، فيفقدون الثقة بأنفسهم. ليس لديهم أي ثقة في أنفسهم. وإذا كان لديهم، فأنهم في الأغلب موهومون. إذا اعدت، بدلاً من أن تطور (تغير شيئاً كل مرة)، فأنت تضيع الوقت فقط.  
+إذا نظرت الى هذه المجاميع أو المنتديات للحظة، يمكنك ان ترى اليأس في قلوب الناس. يقولون لأنفسهم أن هذه المرة ستكون مختلفة! وأنها هي المرة التي سيقومون بالتحكم بأنفسهم! ولكنهم لا يغيرون شيئاً... لا يغيرون شيئاً في مفهومهم، ويفشلون مرة اخرى على نفس النهج. وبعد بعضٍ من الوقت، قد قاموا بفسخ الكثير من الوعود التي اقاموها مع انفسهم، فيفقدون الثقة بأنفسهم. ولا يصبح لديهم أي ثقة في أنفسهم. وإذا كان لديهم، فأنهم في الأغلب موهومون. إذا قمت بالإعادة بدلاً من أن تطور فهمك (تغير شيئاً كل مرة)، فأنت تضيع الوقت فقط.  
 
-تطوير-النفس في فقاعة لحاله. حيث انك محاط برسائل هاتفة. الجميع يخبرون انفسهم أنهم سيصبحون ناجحين، أو يقوم الـ"خبراء" بنشر بعض البوستات حول السعادة وأنه يجب عليك التخلص من الأفكار السلبية. ولكن، كأي فقاعة، يجب أن يكون هناك انفجار.
+"تطوير النفس" في فقاعة لحاله. حيث انك محاط برسائل محفزة. الجميع يخبرون انفسهم أنهم سيصبحون ناجحين، أو يقوم الـ"خبراء" الزائفون بنشر بعض البوستات حول السعادة وأنه يجب عليك "التخلص من الأفكار السلبية". ولكن، كأي فقاعة، يجب أن يكون هناك فرقعة.
 
 
-سواءاً كان الأمر مخطط له أم لا، فعالم "مساعدة النفس" يمكنه أن يهمين عليك من خلال وهم عملاق - وهو وهم "التقدم". يمكنك فقط أن تستوعب انك لم تتقدم مطلقاً عندما تهدأ و تتوقف و تبدأ في التفكير. إتخاذ الأفعال الوهمية اكثر خطورة من التسويف، لأنك تخدع عقلك على التفكير بأنك فعلاً تحرزُ تقدماً. 
+سواءً كان الأمر مخطط له أم لا، فَـعَالـمُ "مساعدة النفس" يمكنه أن يسيطر عليك من خلال وهمٍ عملاق - وهو وهمُ "التقدم". يمكنك فقط أن تستوعب انك لم تتقدم مطلقاً إذا هدئت وتوقفت وبدأت في التفكير. إتخاذ الأفعال الوهمية اكثر خطورة من التسويف، لأنك تخدع عقلك بأنك فعلاً تحرزُ تقدماً. 
 
-الكثير مما يحدث اليوم هو ما يفعله الكثير منكم في هذه اللحظة - تصارع نفسك و تكتب الملاحظات الهامشية و تقول "يجب علي فعل هذا، ويجب علي فعل ذاك، ومن ثم سأفعل..." لا، أنت لا تحتاج لأن تفعل أي شيء. كل ما يجب عليك فعله هو ما تريد أن تفعله. إذا توقفت عن محاولة الوصول لطريقة لفعل الأشياء كما يريدك الأخرون أن تفعلها، فستصبح قادراً على أن تسمع الصوت الخافت الذي يكمن في رأسك، ويريد أن يقوم بفعل الأشياء بطريقة معينة. فقط عندما تفعل ذلك، يمكنك ان تصبح نفسك.
+الكثير مما يحدث اليوم هو ما يفعله الكثير منكم الأن - تصارع نفسك و تكتب الملاحظات الهامشية و تقول "يجب علي فعل هذا، ويجب علي فعل ذاك، ومن ثم سأفعل..." لا، أنت لا تحتاج لأن تفعل أي شيء. كل ما يجب عليك فعله هو ما تريد فعله. إذا توقفت عن محاولة الوصول لطريقةٍ ما لفعل الأشياء كما يريدك الأخرون أن تفعلها، فستصبح قادراً على أن تسمع الصوت الخافت الذي يكمن في رأسك، ويريد أن يقوم بفعل الأشياء بطريقة معينة. فقط عندما تفعلها بتلك الطريقة، يمكنك ان تصبح نفسك.
  
- هذا هو السبب الذي يجبرني أن اوضح انه لا ينبغي عليك قرأة الكتاب وتوقع أن كل شيء أكتبه حقيقي. لأنك إذا لم تفكر بجدية حول حياتك، وحول ظروفك، فيمكن أن يقودك الناس الى الضلال بنفس السهولة التي قد يقودوك بها الى الحق. التعلم يحدث خلال المرء، وليس من خلال المُعلم. التأكيد المستمر لمعتقداتك هو دليل على خوفك. لذلك، تعلم ما هو صحيح، فأنت لا تحتاج الأيمان. 
+هذا هو السبب الذي يجبرني أن اوضح انه لا ينبغي عليك قرأة الكتاب وتوقع أن كل شيء أكتبه حقيقي. لأنك إذا لم تفكر بجدية حول حياتك، وحول ظروفك، فيمكن أن يقودك الناس الى الضلال بنفس السهولة التي قد يقودوك بها الى الحق. التعلم يَحدُث خلال المرء، وليس من خلال المُعلِم. التأكيد المستمر لمعتقداتك هو دليل على خوفك. لذلك، تعلم ما هو صحيح، فأنت لا تحتاج للأيمان. 
  
 
 ## البحث عن التقدم
@@ -52,7 +52,7 @@
 
 في الأغلب، سيقوم هذا بتحطيم كل ما تبقى من الأدوار الطبيعية و الذكور العصريين. سيؤثر هذا على النساء ايضاً، ولكن أغلب التأثير على الرجال. هذا أمر مُحتم.
 
-في خلال كل هذه التغيرات البيئية، كن نوراً لهؤلاء العالقين في قلب الفرط الجنسي. من يستطيع التحكم بطاقته الجنسية سيصبح قوياً للغاية، مواكباً حدوث هذه التغيرات.    
+في خلال كل هذه التغيرات البيئية، كن نوراً لهؤلاء العالقين في قلب الفرط الجنسي. من يستطيع التحكم بطاقته الجنسية سيصبح قوياً للغاية، مواكباً حدوث تلك التغيرات.    
 
 
 ## إمكانية المواد الكيميائية (زائد)
