--- a/src/markdown/arabic/8. Transmutation.md
+++ b/src/markdown/arabic/8. Transmutation.md
@@ -1,39 +1,39 @@
-لما نقوم بتبذير قوة دفعنا بكل سهولة؟
+لما نقوم بتبذير القوة التي تدفعنا بكل سهولة؟
 
-هذه الحياة التي توجد بداخلك، هذا الشغف الذي يجب أن تمتلكه، سواء كان للحصول على النساء أو تطوير نفسك حتى تصبح جذاباً و ناجحاً بما يكفي للحصول على النساء. هذا الشغف قد تم تحطيمه ورميه في القمامة.
+هذه القوة التي توجد بداخلك، هذا الشغف الذي يجب أن تمتلكه، سواءً كان للحصول على النساء، أو تطوير نفسك حتى تصبح جذاباً وناجحاً بما يكفي للحصول على النساء. هذا الشغف قد تم تحطيمه ورميه في القمامة.
 
-ولكن عندما توصل لأحتياجاتك في الحياة، أي الأكل و الشرب و المسكن، فكل ما تبقى هو اكبر احتياج بدائي، واكبر شهوة، وهي استمرار خط عائلتك. وعندما تتخلص من هذه الشهوة، عقلك البدائي يظن انك قد حققت كل ما تحتاجه في حياتك (على المستوى الجسدي). فمن ثم، بالطبع، ستشعر بالتعب، والإرهاق، والكسل.
+ولكن عندما تصل لأحتياجاتك في الحياة، أي الأكل و الشرب و المسكن، فكل ما تبقى هو اكبر احتياج بدائي، واكبر شهوة، وهي إستمرار عائلتك (التكاثر). وعندما تتخلص من هذه الشهوة، عقلك البدائي يظن انك قد حققت كل ما تحتاجه في حياتك (على المستوى الجسدي). فمن ثم، بالطبع، ستشعر بالتعب، والإرهاق، والكسل.
 
-بدلاً من ان تكون فيه هذه الحالة من الإرهاق، التي تجعل جسدك يوحي اليك انه قد حقق ما يريده في الحياة، يمكنك ان تقوم بصنع حالةٍ مضادةٍ تماماً عن طريق الحفاظ على المني، و من خلاله، المحافظة على طاقتك الجنسية. هذا هو التحول.  
+بدلاً من ان تكون فيه هذه الحالة من الإرهاق، التي تجعل جسدك يوحي اليك انه قد حقق ما يريده في الحياة، يمكنك أن تقوم بصنع حالةٍ مضادةٍ تماماً عن طريق الحفاظ على المني، ومن خلاله، المحافظة على طاقتك الجنسية. هذا هو التــحــول.  
 
 <div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Drawing of a person with an aura (not found)" src="https://burgeonbook.org/md_images/field_aura.png" height="250px" class="mdimg"></div>
 
-التحول هو فن تغيير طاقتك الجنسية (خلال الحفاظ على السائل المنوي) إلى طاقة منتجة تحث على النمو. قد يبدوا الأمر الغريباً، ولكن قد قام الملاكمون المحترفون بممارسته على مر مئات السنين. التحول ليس رداً لـ "وخزة" ولكنها عملية مستمرة.     
+التحول هو فن تغيير طاقتك الجنسية (الناتجة عن الحفاظ على السائل المنوي) إلى طاقة منتجة تحثُ على النمو. قد يبدوا الأمر الغريباً، ولكن قد قام الملاكمون المحترفون بممارسته على مر مئات السنين. التحول ليس رداً لـ "وخزة"، بل هو عملية مستمرة.     
 
-قد تظن انه ينبغي عليك فقط ألا تخرج الحيوانات المنوية. ولكن، الحفاظ على الطاقة ليس كافياً. فعليك أن تتعلم كيفية تحويلها الى النجاح. 
+قد تظن انه ينبغي عليك فقط ألا تخرج السائل المنوي. ولكن، الحفاظ على الطاقة فقط ليس كافياً. عليك أن تتعلم كيفية *تحويلها* إلى النجاح. 
 
 عندما اتكلم عن الطاقة، انا لا اعني فقط طاقتك الجسدية، بل اقصد "كمـية الحيـاه" الفعلية بداخلك. عندما تخرج المني، تقوم ببذل بعض من طاقتك أو "حياتك" في هذه العملية، وهذه هي الضريبة. 
 
-الطاقة الجنسية عــاصفــة شديدة من القوة، لدرجة انها يجب أن تجد مخرجاً. فإما ستجد المخرج من خلال الإخراج الجسدي، او من خلال التحول، الذي سيمكنك على رفع هذه الطاقة و اتسغلالها لتحصد فواكه تعبك، ولتشبع الرغبات التي تكمن في قلبك. 
+الطاقة الجنسية عــاصفــة شديدة من القوة، لدرجة انها يجب أن تجد مخرجاً. فإما ستجد المخرج من خلال الإخراج الجسدي (القذف)، او من خلال التحول، الذي سَيُمَكِنُكَ على رفع هذه الطاقة و استغلالها لتحصد ثمار تعبك، ولتشبع الرغبات التي تكمن في قلبك. 
  
- كملحوظة سريعة، قد تشعر وأنك عصبي بشكل غير المعتاد بسبب التغيرات الكيميائية التي تحدث في جسدك من الحفاظ على المني. حافظ على صبرك، لأن الغضب عقابُ لنفسه، فالشخص الغاضب إذا حاول أن يدفع رأسك تحت ماءٍ ليغرقك، فإنه سيغرق نفسه معك.
+كملحوظة سريعة، قد تشعر وأنك عصبي بشكل غير معتاد بسبب التغيرات الكيميائية التي تحدث في جسدك من الحفاظ على المني. حافظ على صبرك، لأن الغضب عقابُ لنفسه، فالشخص الغاضب إذا حاول أن يدفع رأسك تحت ماءٍ ليغرقك، فإنه سيغرق نفسه معك.
    
-## الطاقة الحياة في المرء
+## طاقة الحياة في المرء
 
-عندما يقوم الإنسان بالحفاظ على سائله المنوي (بدون أن يمتلك رغبة في إخراجه)، يحدث شيء ما يجعل هذا الشخص يبرزُ طاقةً من حوله، وهي طاقةٌ تجعل الاخرين منجذبين اليه. بعض الناس يربطون هذا الأمر لأشياء روحانية، والاخرون يربطونه لتغيرات بدنية، او فيرمونات، او طريقة تعاملك مع نفسك. ولكن، هذا التأثير الذي يجعلك تبدو اكثر جاذبياً لا يحدث مرةً واحدةً فقط.
+عندما يقوم الإنسان بالحفاظ على سائله المنوي (بدون أن يمتلك رغبة في إخراجه)، يحدث شيء ما يجعل هذا الشخص يبرزُ طاقةً من حوله، وهي طاقةٌ تجعل الاخرين منجذبين اليه. بعض الناس يربطون هذا الأمر بأشياء روحانية، والاخرون يربطونه بتغيرات بدنية، او فيرمونات، او طريقة تعاملك مع نفسك. ولكن، هذا التأثير الذي يجعلك تبدو اكثر جاذبية لا يحدث مرةً واحدةً فقط.
  
- هذه الـ"طاقة المنوية" تقوم بصنع جاذبية اعلى تجاهك. يتناقش الناس حول زيادة الجاذبية تجاه النساء عندما يتحدثون في هذا الأمر، ولكنه في الحقيقية يؤثر على كل تفاعلاتك. فقد يقوم الناس ببدء المحاداث معك، وعموماً سيظنون انك مثيرٌ للإهتمام بشكل أكبر (غالباً يتعلق الأمر بالدوبامين).
+هذه الـ"طاقة المنوية" تقوم بصنع جاذبية أعلى تجاهك. يتناقش الناس حول زيادة الجاذبية من النساء عندما يتحدثون في هذا الأمر، ولكنه في الحقيقية يؤثر على كل تفاعلاتك. فقد يقوم الناس ببدء المحاداث معك، وعموماً سيظنون انك مثيرٌ للإهتمام بشكل أكبر (غالباً يتعلق الأمر بالدوبامين).
  
- قد تشعر بهذه الطاقة التي تظهر حولك، وقد لا تشعر بها. اياً كان، عندما تتعافى مستقبلات الدوبامين الخاصة بك، و تبدأ بتحويل طاقتك الجنسية، الإختلاط مع الاخرين سيبدو مثيراً للإهتمام لك. 
+قد تشعر بهذه الطاقة التي تظهر حولك، وقد لا تشعر بها. اياً كان، عندما تتعافى مُستقبلاتُ الدوبامين الخاصة بك، وتبدأ بتحويل طاقتك الجنسية، الإختلاط مع الاخرين سيبدو مثيراً للإهتمام لك. 
 
 ولكن، تحلى بالتواضع خلال كل هذا؛ بدلاً من ان تسخر من الذين هم في مكانك السابق، حاول ان تكون مصدراً للإهتمام لهم وقدوةً حسنة من خلال تعاملك مع الحياة. 
 
 
 ## مخراج الطاقة الجنسية
 
-يوجد العديد من مخارج  لطاقتك الجنسية. هذه المخارج إما جسدية وإما عقلية. وفي العموم احد افضل هذه المخارج هو الإبــــــداع، لأنه يحتوي على عدد لا يحصى من الإحتمالات والأشياء التي تستطيع إنتاجها والتعبير عنها.
+يوجد العديد من مخارج  لطاقتك الجنسية. هذه المخارج إما جسدية وإما عقلية. وفي العموم أحد اأفضل هذه المخارج هو الإبــــــداع، لأنه يحتوي على عدد لا يحصى من الإحتمالات والأشياء التي تستطيع إنتاجها والتعبير عنها.
 
-التحويل ليس له طريقة معينه. هذه الطرق لا تجدي نفعاً إلا في الأشياء البسيطة جداً. ستتفهم الأمر عندما تبدأ بالشعور به. وعندما تشعر، ستستوعب انك كنت تفتقد الكثير في حياتك طوال هذا الوقت. 
+التحويل ليس له طريقة معينه. هذه الطرق لا تجدي نفعاً إلا في الأشياء البسيطة جداً. ستتفهم الأمر عندما تبدأ بالشعور به. وعندما تشعر، ستستوعب أنك كنت تفتقد الكثير في حياتك طوال هذا الوقت. 
 
 <div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of a person with energy around them (not found)" src="https://burgeonbook.org/md_images/circle_aura.png" height="250px" class="mdimg"></div>
 
@@ -49,9 +49,9 @@
 
 ### التأمل والتفكر
 
-الطريقة الأخرى لتحويل الطاقة هو التأمل. هذه احدى أهم عمليات تحويل الطاقة، وأظن انها تصبح أسهل إذا قمت بها بعد أن تتمرن. لقد وجدت أني إذا تمرنت و قمت بنشر الأكسجين في جميع خلايا عقلي، أصبح قادراً على التأمل بشكل اعمق من المعتاد؛ ويبدو وكأن بعد هذه الخطوة من الهدوء والفراغ الكامل، استطيع بالخروج وانا معي العديد من المفاهيم الجديدة والمعلومات التي تساعدني على التوصل لطرق تجعلني قادراً على الحصول لنتائج تمد حياتي بالسعادة.
+الطريقة الأخرى لتحويل الطاقة هو التأمل. هذه احدى أهم عمليات تحويل الطاقة، وأظن انها تصبح أسهل إذا قمت بها بعد أن تتمرن. لقد وجدت أني إذا تمرنت و قمت بنشر الأكسجين في جميع خلايا عقلي، أصبح قادراً على التأمل بشكل اعمق من المعتاد؛ ويبدو وكأن بعد هذه الخطوة من الهدوء والفراغ الكامل، استطيع بالخروج وانا معي العديد من المفاهيم الجديدة والمعلومات التي تساعدني على التوصل لطرق تجعلني قادراً على الحصول لنتائج تمد حياتي بالسعادة. لذلك، حاول أن تتعلم كيفية التأمل من طريق البحث والقرأة، سيفيدك الأمر جداً.
 
-و نصيحة اخرى، التركيز التام الذي تقوم به وانت تتأمل ليس هو الهدف فقط، ولكن الهدف الحقيقي هو ان تكون قادراً على استحضار هذا التركيز التام في كل لحظة، الى أن يصبح التأمل غير ضروري. 
+ونصيحة اخرى، التركيز التام الذي تقوم به وانت تتأمل ليس هو الهدف فقط، ولكن الهدف الحقيقي هو ان تكون قادراً على استحضار هذا التركيز التام في كل لحظة، الى أن يصبح التأمل غير ضروري. 
 
 التأمل ايضاً يدعم إنتاج الدوبامين بشكل ايجابي جداً. 
 
@@ -59,9 +59,9 @@
 
 نقطة تحول الطاقة رقم ثلاثة هي العمل بشكل متعمق. العمل المتعمق هو مصطلح تم تعريفه من البروفيسور كال نيوبورت، ويعني بإختصار الدراسة بشكل غير متقاطع.  
 
-وهو نوع من الدراسة يقوم به المرء من خلال التركيز التام في شيء واحد لفترة زمنية معينة، ولا يقوم بأخذ أي اوقات من الراحة خلال هذه الفترة. للأسف، هذا النوع من العمل صعب جداً في هذه الأيام، وهذا لأننا مدمنون للتيكنولوجيا، ومدمنون للإنفجارات السريعة من الدوبامين الناشئة من منصات التواصل الإجتماعي.
+وهو نوع من الدراسة يقوم به المرء من خلال التركيز التام في شيء واحد لفترة زمنية معينة، ولا يقوم بأخذ أي اوقات من الراحة خلال هذه الفترة. للأسف، هذا النوع من العمل صعب جداً في هذه الأيام، وهذا لأننا مدمنون للتكنولوجيا، ومدمنون للإنفجارات السريعة من الدوبامين الناشئة من منصات التواصل الإجتماعي.
 
-عقلك يستهلك الكثير من الطاقة عندما تذاكر بجد؛ ولكن هذا يعد طريقة رائعة لتحويل طاقتك الجنسية، ومن أكثر الطرق إنتاجية على الإطلاق. عندما تتعلم الكثير، ستستطيع أن تنتج، وتجني، وتكتشف الكثير. لكي تساهم بشكل إبداعي، يجب عليك وأن تكون مهووساً بهذا الشيء - من خلال الإبداع والهوس لهدف ما، ستكون قادراً على صنع شيء لم يتخيله احدٌ من قبلك. ولكن، يجبُ أن تحذر من هوسك، فلا ينبغي لهذا الهوس أن يسبقك. إستخدم هذا الهوس كأداة. 
+عقلك يستهلك الكثير من الطاقة عندما تذاكر بجد؛ ولكن هذا يعد طريقة رائعة لتحويل طاقتك الجنسية، ومن أكثر الطرق إنتاجية على الإطلاق. عندما تتعلم الكثير، ستستطيع أن تنتج، وتجني، وتكتشف الكثير. لكي تساهم بشكل إبداعي، يجب عليك أن تكون مهووساً بهذا الشيء - ومن خلال الإبداع والهوس بهدف ما، ستكون قادراً على صنع شيء لم يتخيله احدٌ من قبلك. ولكن، يجبُ أن تحذر من هوسك، فلا ينبغي لهذا الهوس أن يسبقك. إستخدم هذا الهوس كأداة. 
 
 ### الإستمتاع بالفن
 
@@ -77,26 +77,26 @@
 
 الطريقة رقم خمسة هو القيام بتفاعلات إجتماعية مجدية بالنفع.
  
-بعد بعضٍ من الوقت من الحفاظ على سائلك المنوي، ستصبح حياتك اكثر خفة و متاعاً من الناحية الإجتماعية. ستصبح الكاريزما الخاصة بك أكثر علواً بين أصدقائك. 
+بعد بعضٍ من الوقت من الحفاظ على سائلك المنوي، ستصبح حياتك اكثر خفة و متعة من الناحية الإجتماعية. ستصبح الكاريزما الخاصة بك أكثر علواً بين أصدقائك. 
 
 في هذه الحالة من وجود فرط من الطاقة الجنسية، مقابلة اصدقائك والتكلم معهم والمرح يصبح ممتعاً جداً وإنتاجياً. 
 
-ستجد أنك اكثر خفة، وأكثر دعابة، وفي نفس الوقت، ستصبح مركزَ إلهامٍ لأصدقائك. ستقوم بأداء افضل إذا وضعت قيمةً لما يقوله الشخص الأخر حاولت أن تركز معه - سيقوم هذا الشخص بإحترام إهتمامك، خاصةً إذا كنت قادراً على تذكر ما قاله الشخص.   
+ستجد أنك اكثر خفة، وأكثر دعابة، وفي نفس الوقت، ستصبح مركزَ إلهامٍ لأصدقائك. ستقوم بأداء افضل إذا وضعت قيمةً لما يقوله الشخص الأخر وحاولت أن تركز معه - سيقوم هذا الشخص بإحترام إهتمامك، خاصةً إذا كنت قادراً على تذكر ما قاله الشخص.   
 
 ### الإبداع والتعبير الذاتي
 
-الطريقة رقم ستة هي من خلال وجود مخرج إبداعي، سواءاً كان من خلال الموسيقى، الفن، الرسم، الشعر، التصوير، الكتابة، أو اي شيء يتطلب الإبداع.  
+الطريقة رقم ستة هي من خلال وجود مخرج إبداعي، سواءً كان من خلال الموسيقى، الفن، الرسم، الشعر، التصوير، الكتابة، أو اي شيء يتطلب الإبداع.  
 
-ستجد أنك إذا تملكت طاقتك الجنسية، تستطيع الإبداع بشكل لم يسبق. وقد يساعدك هذا في رحلتك لإنتاج اشياء تعزها حقاً. التعبير يعد ايضاًُ طريقة للتعافي من الأشياء التي لم تفهمها بعد؛ تحويل افكارك التي يصعب قرأتها إلى انواع من الفن طريقة فعالة للتعافي. 
+ستجد أنك إذا تَمَلكتَ طاقتكَ الجنسية، ستستطيع الإبداع بشكل لم يسبق. وقد يساعدك هذا في رحلتك لإنتاج اشياء تُعزها حقاً. التعبير يعد ايضاًُ طريقة للتعافي من الأشياء التي لم تفهمها بعد؛ تحويل افكارك التي يصعب قرأتها إلى انواع من الفن طريقة فعالة للتعافي. 
 
 
 ## عن تحول الطاقة
 
-يوجد هناك بعض الأشياء مثل الأستحمام بمياه باردة، تنظيف البيئة المحيطة بك، والتفكير في الطرق التي تجعلك تحقق أهدافك، وهي ليست طرق لتحويل الطاقة، لكنها تدعم عملية التحويل. ولكن، لا تحاول أن تضيف العشرات من الأشياء الى روتينك اليومي مباشرةً، ولا تشعر بالضغط إذا لم يمتلئ جدولك بالكامل. ينبغي عليك أن تبدأ في بناء روتين و نمط حياة **ببــطــئ وبدقة**، ولكن لا ينبغي ان تجعل هذا الروتين مبني على البيئة المحيطة بك بشكل كبير.  
+يوجد هناك بعض الأشياء مثل الأستحمام بمياه باردة، تنظيف البيئة المحيطة بك، والتفكير في الطرق التي تجعلك تحقق أهدافك، وهي ليست طرق لتحويل الطاقة، لكنها تدعم عملية التحويل. ولكن، لا تحاول أن تضيف العشرات من الأشياء الى روتينك اليومي مباشرةً، ولا تشعر بالضغط إذا لم يمتلئ جدولك بالكامل. ينبغي عليك أن تبدأ في بناء روتين ونمط حياة **ببــطــئ وبدقة**، ولكن لا ينبغي ان تجعل هذا الروتين مبني على البيئة المحيطة بك بشكل كبير.  
 
-من الأفضل أن تقوم ببناء العادات الجديدة حول اشياء بسيطة و متاحة، مثل شرب الشاي قبل النوم، وتوقيت وجباتك اليومية، والإستحمام صباحاً... الخ.  
+من الأفضل أن تقوم ببناء العادات الجديدة حول اشياء بسيطة ومتاحة، مثل شرب الشاي قبل النوم، وتوقيت وجباتك اليومية، والإستحمام صباحاً... الخ.  
 
-إذا جعلت مع تريد القيام به الأختيار الأسهل، فستقوم بفعله. إذا كان ما تفعله حالياً ليس الأسهل، فلتجعله سهلاً عن طريق تغير بيئتك المحيطة، أو قم بما هو أفضل وأفهم هذه البيئة. بالطبع، بعض الأشياء ستظل صعبة مهما فعلت، ولكن في تلك الحالات، يجب عليك أن تعتز بهويتك، ويجب على غايتك وأهدافك الكبرى أن تكون المحفز للقيام بهذه الأشياء.
+إذا جعلت ما تريد القيام به الأختيار الأسهل، فستقوم بفعله. إذا كان ما تفعله حالياً ليس الأسهل، فلتجعله سهلاً عن طريق تغيير بيئتك المحيطة، أو قم بما هو أفضل وأفهم هذه البيئة. بالطبع، بعض الأشياء ستظل صعبة مهما فعلت، ولكن في تلك الحالات، يجب عليك أن تعتز بهويتك، ويجب على غايتك وأهدافك الكبرى أن تكون المحفز للقيام بهذه الأشياء.
    
 قال سكوت ادامز من قبل، "أبنِ الأنظمة، وليس الأهداف". أستخدم عقلك لتكتشف انواع البيئات التي تجعلك قادراً على النمو والأزدهار، ومن ثم، قم بخلق بيئة من حولك تجعلك قادراً على النجاح بنسبةٍ اعلى.
 
@@ -107,15 +107,15 @@
 
 البعض لا يريدك أن تنجح.
 
-عقلية السلطعون، أو نظرية السلطعون، هي طريقة تفكير، ويمكن تلخيصها في عبارة، وهي: "إذا لا يمكنني أن امتلكه، فلا يمكنك أنت تمتلكه ايضاً". وضرب هذا المثال ليصف الناس الذين يحاولون أن يقللوا من ثقة نفس من استطاع أن يحرز نجاحاً افضل من الأخرين. ويقومون بهذا بسبب الغيرة، الحسد، الحقد، التأمر، والتنافس، لكي يوقفوا تقدم هذا الشخص الناجح. ستصبح الأمور خطيرة لأن طاقتك تزداد، ولأنك تعافي نفسك في نفس الوقت.
+عقلية السلطعون، أو نظرية السلطعون، هي طريقة تفكير، ويمكن تلخيصها في عبارة، وهي: "إذا لا يمكنني أن امتلكه، فلا يمكنك أنت تمتلكه ايضاً". وضُرب هذا المثال ليصف الناس الذين يحاولون أن يقللوا من ثقة نفس من إستطاع أن يحرز نجاحاً افضل منهم. ويقومون بهذا بسبب الغيرة، والحسد، والحقد، والتأمر، والتنافس، لكي يوقفوا تقدم هذا الشخص الناجح. ستصبح الأمور خطيرة لأن طاقتك تزداد ولأنك تتعافى في نفس الوقت.
    
-قد يمتلك بعض الأشخاص في حياتك نفس هذا التفكير. يرون النجاح، وبسبب عدم نجاحهم، يبدأون في سحبك لمستواهم. ما يجب عليك فهمه أن التصادم مع هؤلاء الأشخاص مجرد إهدار لوقتك. أنت لا تحارب إلا الجهل، ولا يمكنك أن تنتصر على الجهل. ومن خلال هذه المحاربة، سيشعرون بأنهم مهمون.  
+قد يمتلك بعض الأشخاص في حياتك نفس هذا التفكير. يرون النجاح، وبسبب عدم نجاحهم، يبدأون في سحبك لمستواهم. ما يجب عليك فهمه أن التصادم مع هؤلاء الأشخاص مجرد إهدار لوقتك. أنت لا تحارب إلا الجهل، ولا يمكنك الأنتصار على الجهل. ومن خلال هذه المحاربة، سيشعرون بأنهم مهمون.  
 
-بدلاً من ذلك الصراع، يجب نتجاهل هؤلاء الأشخاص (والذي يدعوهم البعض بـ"مصاصين الطاقة")، ولا يجب على افعالهم أن تؤثر علينا، مهما كانت. إذا لم تتأثر، سيزداد شعورهم بالضعف. وعندما يحدث ذلك، فإنهم إما سيتسلمون ويطلبون منك يد العون، أو سيستمرون في سلبيتهم حتى الفشل. على أي حال، لا تُحط نفسك بهؤلاء الأشخاص.   
+بدلاً من ذلك الصراع، يجب نتجاهل هؤلاء الأشخاص (والذي يدعوهم البعض بـ"مصاصين الطاقة")، ولا يجب على أفعالهم أن تؤثر علينا مهما كانت. إذا لم تتأثر، سيزداد شعورهم بالضعف. وعندما يحدث ذلك، فإنهم إما سيتسلمون ويطلبون منك يد العون، أو سيستمرون في سلبيتهم حتى الفشل. على أي حال، لا تُحط نفسك بهؤلاء الأشخاص.   
 
-إذا كان أحد من أصدقائك لا يدعم نموك، فقل له (بشكل خاص) مباشرةً وبدون أي تسامح المشاكل التي تراها به. إذا لم يملك التواضع ليغير من نفسه، فأتركه. الأمر أكثر تعقيداً إذا تعلق بالعائلة، فلا يمكنك أن تترك عائلتك. ولكن في نفس الوقت، قد يكون والديك أو إخوتك مصدر تأثير سلبي، سواء كانوا يشعرون بذلك أم لا. لتحل هذه المشكل، قم بتغيير بيئتك بشكل مستمر، تعلم كيف تتعامل مع الطبع البشري، وتعلم كيف تؤثر على من لا يملك التواضع والإخلاص.      
+إذا كان أحد من أصدقائك لا يدعم نموك، فقل له (بشكل خاص) مباشرةً وبدون أي تسامح المشاكل التي تراها به. إذا لم يملك التواضع ليغير من نفسه، فأتركه. الأمر أكثر تعقيداً إذا تعلق بالعائلة، فلا يمكنك أن تترك عائلتك. ولكن في نفس الوقت، قد يكون والديك أو إخوتك مصدر تأثير سلبي، سواءً كانوا يشعرون بذلك أم لا. لتحل هذه المشكل، قم بتغيير بيئتك بشكل مستمر، تعلم كيف تتعامل مع الطبع البشري، وتعلم كيف تؤثر على من لا يملك التواضع والإخلاص.      
 
-إذا قمت بجرح شخصٍ أخر ﻷنه كان يتوقع منك شيئا، فهذه مشكلته. إذا كان على إتفاقٍ معك، فهذه مشكلتك. ولكن، إذا كان يتوقع شيئا منك، فهذه مشكلته بالكامل. الأمر لا يتعلق بك مطلقاً. سيكون لدى الأشخاص في حياتك الكثير من التوقعات، ولكن كلما تخلصت من هذه التوقعات بشكل أسرع، كان الأمر أفضل.
+إذا قمت بجرح شخصٍ أخر ﻷنه كان يتوقع منك شيئا، فهذه مشكلته. إذا كان على إتفاقٍ معك وجرحته، فهذه مشكلتك. ولكن، إذا كان يتوقع شيئا منك، فهذه مشكلته بالكامل والأمر لا يتعلق بك مطلقاً. سيكون لدى الأشخاص في حياتك الكثير من التوقعات، ولكن كلما تخلصت من هذه التوقعات بشكل أسرع، كلما كان الأمر أفضل.
 
 إذا رفعت من معاييرك لإقتناء أصدقائك، فستزداد فرص نجاحك في جميع المجالات. لا يجب عليك أن تصادق شخصاً يؤثر عليك بشكل سلبي، حتى ولو كنت وحيداً. إذا لم تستطع أن تجد أصدقاءً جيدين، فهل حقاً تظهر نفسك بشكل جيد لكي تحظى بفرصة مقابلة أشخاص مثيرين للأهتمام؟
 
@@ -124,7 +124,7 @@
 
 في النهاية، يمكنك أن تختار أن تجد المخزى في حياتك، أو يمكنك أختيار الراحة. 
 
-إذا لم تستهلك طاقتك الجنسية، في الأغلب ستهدرها في الأستنماء. ولكن يجب عليك معرفة انه لا ينبغي عليك أن تستخدم الأستنماء بدون مثيرات كبديل للأباحية، هذا لأن هناك رابطة في عقلك بين الأستنماء والإباحية. بالطبع، للأستنماء بعض الأضرار، ولكن يمكنك إسترجاع طاقتك خلال أسبوع في أغلب الحالات، بينما الإباحية تستغرق العديد من الشهور لكي يتعافى عقلك و بدنك.     
+إذا لم تستهلك طاقتك الجنسية، في الأغلب ستهدرها في الأستنماء. ولكن يجب عليك معرفة انه لا ينبغي عليك أن تستخدم الأستنماء بدون مثيرات كبديل للأباحية، هذا لأن هناك رابطة في عقلك بين الأستنماء والإباحية. بالطبع، للأستنماء بعض الأضرار، ولكن يمكنك إسترجاع طاقتك خلال أسبوع في أغلب الحالات، بينما الإباحية تستغرق العديد من الشهور لكي يتعافى عقلك وبدنك.     
 
 إذا قمت بالأستنماء أو ممارسة الجنس بشكل مفرط، فسيقوم هذا بإلحاق الضرر لجسدك و لمستويات طاقتك. بدلاً من أن تهدر طاقتك الجنسية، أستخلص القيمة التي توجد بها، وحولها إلى أشياء تعتبرها ذات معنى. هذه هي الطريقة التي ستجعلك قادراً على دفع حياتك وإيجاد **الحـــركــة**
 
