--- a/src/markdown/arabic/9. Understandings.md
+++ b/src/markdown/arabic/9. Understandings.md
@@ -1,4 +1,4 @@
-قبل أن تقوم بفهم معنى الأختــيــار بشكل كامل، يجب عليك أن تتعلم كيف تــرفــض. معظم مشاكلنا تأتي من ما *نفعله* بدلا من أن تأتي من ما *لا نفعله*.  
+قبل أن تقوم بفهم معنى "أن تختـار" بشكل كامل، يجب عليك أن تتعلم "أن تــرفــض". معظم مشاكلنا تأتي مما *نفعله* بدلا من أن تأتي مما *لا نفعله*.  
 
 **أنت تـستــحــق الحريـــة** 
 
@@ -7,9 +7,9 @@
 
 ## الإستحلام - الإخراجات الليلية
 
-قد تلاحظ أنك قد تبدأ بالإستحلام بعد توقفك. إذا لم تكن تعرف، الإستحلام هو مجرد حلم (وفي الأغلب يكون بلا معنى) ذو طبع جنسي، ويحدث بشكل طبيعي إذا لم تمارس في الأفعال الجنسية. توجد هذه الأحلام لكي تخرج الحيونات المنوية الميتة من جسدك، لكي تزيد من خصوبتك. ولكن، الجزء المزعج في هذه الأحلام هو أن البعض يشعر بنفس المشاعر التي كان يخوضها عندما كان عالقاً في فخ الإباحية.   
+قد تلاحظ أنك قد تبدأ بالإستحلام بعد توقفك. إذا لم تكن تعرف، الإستحلام هو مجرد حلم (وفي الأغلب يكون بلا معنى) ذو طبع جنسي، ويحدث بشكل طبيعي إذا لم تمارس الأفعال الجنسية. توجد هذه الأحلام لكي تخرج الحيونات المنوية الميتة من جسدك لكي تزيد من خصوبتك. ولكن، الجزء المزعج في هذه الأحلام هو أن البعض يشعر بنفس المشاعر التي كان يشعر بها عندما كان عالقاً في فخ الإباحية.   
 
-لا ينبغي عليك أن تنظر لهذه الأحلام بشكل سلبي. منذ قبل، كنت تهدر خصوبتك من خلال التخريب الذاتي لعاداتك - بينما الأستحلام مجرد نتيجة لعمل هورموناتك بشكل طبيعي. لا تقم ببناء نظرة سلبية لهذه الأحلام، وفي نفس الوقت لا تنتظرها بشغف (لأنها ستعد بديلاً إذا قمت بذلك). يجب عليك أن تتفهم أن هذه الأحلام محايدة وطبيعية. إذا لم يعجبك الحلم، فأنت قادر على التحكم بما تراه.
+لا ينبغي عليك أن تنظر لهذه الأحلام بشكل سلبي. منذ قبل، كنتَ تهدرُ خصوبتكَ من خلال التخريب الذاتي بعاداتك السلبية - بينما الأستحلام مجرد نتيجة لعمل هورموناتك بشكل طبيعي. لا تقم ببناء نظرة سلبية لهذه الأحلام، وفي نفس الوقت لا تنتظرها بشغف (لأنها ستعد بديلاً إذا قمت بذلك). يجب عليك أن تتفهم أن هذه الأحلام محايدة وطبيعية. إذا لم يعجبك الحلم، فأنت قادر على التحكم بما تراه.
     
 
 ## الملل
@@ -22,9 +22,9 @@
 
 
 ## البدائل
-لا يوجد أي تفهم في العثور على البدائل. إذا ركزت قليلاً، ستجد أن هذا البديل ما هو إلا بحثٌ عن الطمئنينة والأمان والمهرب؛ وليس بحثاً عن الفهم، ليس بحثاً عن الحقيقة، بل بحث عن التفادي. 
+لا يوجد أي فهم في العثور على البدائل. إذا ركزت قليلاً، ستجد أن هذا البديل ما هو إلا بحثٌ عن الطمئنينة والأمان والمهرب؛ وليس بحثاً عن الفهم، ليس بحثاً عن الحقيقة، بل بحث عن التفادي. 
 
-في البدائل نقص من الفهم - أي أنك تشعر أن الإباحية تحتاج لأن تُبدل بشيء ما. وقد يحدث هذا التبديل دون ان تشعر. إذا حاولت أن تبدل المتعة الجسدية الفورية التي تمدها لك الإباحية بالعمل، أو الإنتاجية، فلن تقارن الإباحية بهذه الأشياء من ناحية الدوبامين. الخلاصة هي أن هذه الأشياء لا ينبغي أن تكون بدائل مباشرة، بل مخارج للطاقة الجديدة التي ولدت بداخلك.  
+يوجد في البدائل نقص فهم - أي أنك تشعر أن الإباحية تحتاج لأن تُبدل بشيء ما. وقد يحدث هذا التبديل دون ان تشعر. إذا حاولت أن تبدل المتعة الجسدية الفورية التي تمدها لك الإباحية بالعمل، أو الإنتاجية، فلا توجد أي مقارنة بين الإباحية وهذه الأشياء من ناحية الدوبامين. الخلاصة هي أن هذه الأشياء لا ينبغي أن تكون بدائل مباشرة، بل مخارج للطاقة الجديدة التي ولدت بداخلك.  
 
 
 ## التذكيرات
@@ -39,9 +39,6 @@
 
 الـ"فائدة" الفورية والشديدة جداً هو الحمل الذي سيرفع من على عاتقيك عندما تصبح حراً.
 
-وهذه الحرية يمكن إيجادها، في الحاضر، وليس في الماضي أو المستقبل. الحرية تكمن في اللحظة التي تعيشها.  
-
-
+وهذه الحرية يمكن إيجادها، في الحاضر، وليس في الماضي أو المستقبل. الحرية تكمن في اللحظة التي تعيشها الأن.  
 
 **الوضوح لا يعني الرؤية الصافية، بل إستيعاب أنك كنت ترى عبر الضباب**
-
