--- a/src/markdown/arabic/10. Movement.md
+++ b/src/markdown/arabic/10. Movement.md
@@ -1,25 +1,25 @@
-هنالك شيء أردت ان اكتب عنه؛ إذا فشلت في تحويل طاقتك الجنسية، ستتراكم الطاقة عليك، وستجبر على أن تخرجها من خلال القذف، وإلا سيكون الأمر سلبياً. المفتاح هنا انك يجب عليك أن تفهم أنك لم تفشل في أي شيء. إذا كنت تظن أنك ستقدر على أن تعيش ما تبقى من حياتك بدون أن تمارس الجنس أو تستنمي، فأنت تعيش في وهم. كل ما كُتب هنا مستهدف لمن يريد أن يصبح اكثر إنتاجية، ويريد الصفاء - فإذا تراكمت عليك الطاقة الجنسية ولم تستطع تحويلها، فيمكنك الإستنماء دون إباحية. ولكن، بعد ذلك، ستقل مستويات طاقتك. لهذا السبب يجب عليك أن تعيد النظر لطرق تحويل الطاقة الجنسية، وأنظر إذا كنت تقوم بما فيه الكفاية أم لا. التحول هو عملية مستديمة - وقيمتها أكبر مما تتخيل.
+هنالك شيء أردت ان اكتب عنه؛ إذا فشلت في تحويل طاقتك الجنسية، ستتراكم الطاقة عليك، وستجبر على أن تخرجها من خلال القذف، وإلا سيكون الأمر سلبياً. المفتاح هنا انك يجب عليك أن تفهم أنك لم تفشل في أي شيء. إذا كنت تظن أنك ستقدر على أن تعيش ما تبقى من حياتك بدون أن تمارس الجنس أو تستنمي، فأنت تعيش في وهم. كل ما كُتب هنا مستهدف لمن يريد أن يصبح اكثر إنتاجية، ويريد الصفاء - فإذا تراكمت عليك الطاقة الجنسية ولم تستطع تحويلها، فيمكنك الإستنماء دون إباحية. ولكن بعد ذلك، ستقل مستويات طاقتك. لهذا السبب يجب عليك أن تعيد النظر لطرق تحويل الطاقة الجنسية، وأنظر إذا كنت تقوم بما فيه الكفاية أم لا. التحول هو عملية مستمرة - وقيمتها أكبر مما تتخيل.
 
  
 ## الحقيقة الأنفرادية
 
-عندما نقوم بتكوين المفاهيم الجديدة، يوجد جزء بداخلنا يود أن ينشر هذه الرسالة، وهذا الفهم، مباشرةً للأخرين. الحقيقة هي أنك لا تستطيع أن تجعل شخصاً يتفهم شيئاً بشكل مباشر. يمكنك أن تجعله يؤمن بهذا الشيء، ولكن إذا قمت بفعل ذلك فأنت تمحو ذكاء ذلك الشخص، وقدراته على الإستيعاب، فتصبح مضيعةً للوقت. الأسئلة المُحتاجة هي الأسئلة التي لم تطرح. وهذه الأسئلة تظهر فقط عندما يصبح الشخص قادراً على إكتشاف شيء ما - وإيجاده الحقيقة حقاً، ليس من خلال الرغبة في نتيجةٍ ما، بل من خلال الفهم عن طريق الرؤية الواضحة. 
+عندما نقوم بتكوين المفاهيم الجديدة، يوجد جزء بداخلنا يود أن ينشر هذه الرسالة، وهذا الفهم، مباشرةً للأخرين. الحقيقة هي أنك لا تستطيع أن تجعل شخصاً يتفهم شيئاً بشكل مباشر. يمكنك أن تجعله يؤمن بهذا الشيء، ولكن إذا قمت بفعل ذلك فأنت تمحو ذكاء ذلك الشخص، وقدراته على الإستيعاب، فتصبح مضيعةً للوقت. الأسئلة الضرورية هي الأسئلة التي لم تطرح. وهذه الأسئلة تظهر فقط عندما يصبح الشخص قادراً على إكتشاف شيء ما - وإيجاده الحقيقة حقاً، ليس من خلال الرغبة في نتيجةٍ ما، بل من خلال الفهم عن طريق الرؤية الواضحة. 
 
 لا يمكنك أن تساعد الأخرين بينما أنت تغرق. الكثير مما يجد الحرية من العادات المدمرة يريد أن يساعد الأخرين ايضاً، ولكن، يقومون بتجاهل أنفسهم إذا فعلوا ذلك. إنها طريقة للتسويف، وتأجيل لإستيعاب مؤلم، وهو أنك كنت مخطئاً حول بعض الأفكار التي كنت تتمسك بها. انه هرب من ذاتك. إذا أردت أن تساعد الأخرين، فلتركز على نفسك. قد يبدوا الأمر غير متوقع، ولكن إذا فكرت في الأمر، ستصبح قادراً على رؤية صحته.
 
-الكشف هو نتيجة لثورة تحدث بداخلك. وهذه الثورة ممكنة فقط من خلال التواضع - والأغلب يتفادون هذا التواضع، خوفاً من أن يكونوا مخطئين. نحن كائنات إجتماعية، ونريد أن نكون على صواب وأن نكون مهمين بالنسبة لأنفسنا وللأخرين. عندما نكتشف أننا قد نكون مخطئين، فأنفسنا، في الطبيعة، ستحاول أن تدافع عن هذا الخطأ بدلاً من إكتشاف الصواب، وهذا بسبب الألم الناتج عن إستيعابك بأن ما تؤمن به ليس صحيحاً. يمكنك رؤية ذلك من خلال الأشخاص الذين يؤمنون بأشياءٍ معينة. قد يكون اسلوب حياتهم، او الدين، أو طريقتهم في العيش، إلخ. بدون التواضع، قد ينتهي بك المسار في أي مكان. لمن أراد أن يتطور و يقوم بإحراز التقدم دون أن يظل ثابتاً في مكانه، يجب عليك ان تكون مستعداً لحدوث ثورة بداخلك.  
+الإكتشاف نتيجة لثورة تحدث بداخلك. وهذه الثورة ممكنة فقط من خلال التواضع - والأغلب يتفادون هذا التواضع، خوفاً من أن يكونوا مخطئين. نحن كائنات إجتماعية، ونريد أن نكون على صواب وأن نكون مهمين بالنسبة لأنفسنا وللأخرين. عندما نكتشف أننا قد نكون مخطئين، فأنفسنا، في الطبيعة، ستحاول أن تدافع عن هذا الخطأ بدلاً من إكتشاف الحقيقة، وهذا بسبب الألم الناتج عن إستيعابك بأن ما تؤمن به ليس صحيحاً. يمكنك رؤية ذلك من خلال الأشخاص الذين يؤمنون بأشياءٍ معينة. قد يكون اسلوب حياتهم، او الدين، أو طريقتهم في العيش، إلخ. بدون التواضع، قد ينتهي بك المسار في أي مكان. لمن أراد أن يتطور و يقوم بإحراز التقدم دون أن يظل ثابتاً في مكانه، يجب عليه ان يكون مستعداً لحدوث ثورة بداخله.  
 
 السبب الذي دفعني لتكرار أهمية إيجادك الحقيقية *بــــمـفــردك*، هو انه إذا لم تجدها ستكون عُرضاً للأيمان بالأفكار المخطئة بنفس سهولة إيمانك للحقيقة. لا أريد أن اسلب حريتك منك - ولكن الحقيقة هي أن معظم أفكار تطوير الذات مبنية حول التقييد. العقل الحر خالي من أي تقييد - ولكنه قادر على فهم ما هو مفيد بشكل دقيق و تركيز عالي. هذا الفهم يأتي من التواضع.     
 
 لدى أغلب الناس رغبة طبيعية في الحنين الى الماضي - أي تذكر اللحظات الجيدة التي مروا بها، ونسيان ما هو سيئ. فقط انظر لعدد الناس الذين يقومون بالحديث عن "أيام الماضي"، وكيف يتكلم من هم اكبر منا سناً عن مدى زينة الحياة في أيام شبابهم. من ناحية علم النفس، هذا ما يدعى بتفضيل الذاكرة، وتزداد نسبه حدوثه للشخص إذا كان يعيش في وضع سيء في حياته الحالية. إذا كنت تعاني من مواقف صعبة، أو خسائر، او اياً يكن، فالإباحية ليست المنقذ الذي سيخرجك من هذا الحال. في الواقع، سيجعل التعامل مع هذه الأمور أشد صعوبة.   
 
-جزء من عقلك، يدعى بالــ"باسال جانجليا"، يعد الجزء للأفعال التلقائية التي تقوم بها. يتكلف بالقيام بهذه الأشياء دون أن تفكر، مثل سلك الطرق التي تسلكها بشكل متكرر، أو القيادة، الخ. إذا كان إستخدام الإباحية شيئاً يومياً بالنسبة لك، قد تقوم بتجهيز نفسك لإستخدام الأباحية تلقائياً دون أن تشعر. وقد تترسخ في عقلك لدرجة أن الأمر يشعر طبيعياً - مع انه على عكس ذلك كلياً. الحل لهذا الأمر هو من خلال تغيير بيئتك، حتى لا يكون هذا التجهيز التلقائي للإباحية أمراً ممكناً. إعطي عقلك مساحة للتفكير عن طريق تغيير بيئتك. 
+جزء من عقلك، يدعى بالــ"باسال جانجليا"، يعد الجزء للأفعال التلقائية التي تقوم بها. يتكلف بالقيام بهذه الأشياء دون أن تفكر، مثل سلك الطرق التي تسلكها بشكل متكرر، أو القيادة، الخ. إذا كان إستخدام الإباحية شيئاً يومياً بالنسبة لك، قد تقوم بتجهيز نفسك لإستخدام الأباحية تلقائياً دون أن تشعر. وقد تترسخ في عقلك لدرجة أن الأمر يشعر طبيعياً - مع انه على عكس ذلك كلياً. الحل لهذا الأمر هو من خلال تغيير بيئتك، حتى لا يكون هذا التجهيز التلقائي للإباحية أمراً ممكناً. إعطِ عقلك مساحةً للتفكير من خلال تغيير بيئتك. 
  
-ولأن، أخي، قد وصلنا لنهاية الكتاب. يمكنني أن اجعلك بإعطاء وعداً لنفسك، أو لتحاول أن تطمئن نفسك، أو شيء من هذا القبيل. ولكن، لن أقوم بفعل ذلك. لن أقوم حتى بأن اخبرك أن تتوقف عن مشاهدة الإباحية - او أن تحول طاقتك الجنسية من خلال الحفاظ على المني. الحرية التي تمتلكها هي مقدرتك على فعل ما تشاء. يمكنك أن تعيش حياة مليئة بإتباع الشهوات والمتعة الفورية - أو يمكنك أن تعيش حياة ذو مخزى، وقيمة، وصدق.  
+ولأن، أخي، قد وصلنا لنهاية الكتاب. يمكنني أن اجعلك أن تعطي وعداً لنفسك، أو لتحاول أن تُطَمئن نفسك، أو شيء من هذا القبيل. ولكن، لن أقوم بفعل ذلك. لن أقوم حتى بأن اخبرك أن تتوقف عن مشاهدة الإباحية - او أن تحول طاقتك الجنسية من خلال الحفاظ على المني. الحرية التي تمتلكها هي مقدرتك على فعل ما تشاء. يمكنك أن تعيش حياة مليئة بإتباع الشهوات والمتعة الفورية - أو يمكنك أن تعيش حياة ذو مخزى، وقيمة، وصدق.  
 
-عندما يحدث تفهم عميق لشيء ما، ستحدث التغيرات بشكل شبه تلقائي. التركيز الأن يجب ان يكون على الأعمال الهادفة.  
+عندما يحدث فهم عميق لشيء ما، ستحدث التغيرات بشكل شبه تلقائي. التركيز الأن يجب ان يكون على الأعمال ذات المخزى.  
 
-لا يوجد حل قاطع للساعدة. ولكن، الوصول الى السعادة يتطلب عملية من الفهم وإكتشاف النفس و التدبر. السعادة ما هي إلا عملية تدريب نفسك على رؤية الحقيقة. 
+لا يوجد حل قاطع للساعدة. ولكن، الوصول الى السعادة يتطلب عملية من الفهم وإكتشاف النفس والتدبر. السعادة ما هي إلا عملية تدريب نفسك على رؤية الحقيقة. 
  
  
 ## ملحوظة الختام
@@ -31,9 +31,8 @@
 معنى كلمة برجيون: النمو 
 
 
-ملحوظة ترجمة: قام بترجمة هذا الكتاب بحر حمدي - شابٌ يسعى لمعالجة أضرار الإباحية في العالم العربي. تمت مراجعته العديد من المرات، من خلالي ومن خلال بعض الأخوة الكرام. إذا افادتك هذه الترجمة، أو ساهمت في توفقك، لا تنسى ذكرنا في الدعاء. 
+ملحوظة ترجمة: قام بترجمة هذا الكتاب بحر حمدي، ومراجعه العربية من خلال خربوش أبو السبع (نعم، أسماء حقيقة) - شابان يسعيان لمعالجة أضرار الإباحية في العالم العربي. إذا افادتك هذه الترجمة، أو ساهمت في توقفك، لا تنسى ذكرنا في الدعاء.  
 
-إذا وجدت بعض الأخطاء الترجمية، أو اردت إقتراح التعديلات، يمكنك أن تتواصل معي من خلال الديسكورد، Maroon#1461
- 
- 
+إذا وجدت بعض الأخطاء الترجمية، أو اردت إقتراح التعديلات، يمكنك أن تتواصل معي من خلال الديسكورد، A1#4163
+
 تصميم 2021-2023
